--- a/trunk/pm2012_1/src/view/Main.form
+++ b/trunk/pm2012_1/src/view/Main.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
@@ -163,11 +163,11 @@
                           <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="text_filed_mes" pref="200" max="32767" attributes="0"/>
-                                  <Component id="text_filed_vendas" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="text_filed_precos" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="text_filed_vendedores" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="text_filed_saida" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="text_field_mes" pref="200" max="32767" attributes="0"/>
+                                  <Component id="text_field_vendas" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="text_field_precos" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="text_field_vendedores" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="text_field_saida" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -187,31 +187,31 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="text_filed_mes" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="text_field_mes" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="label_mes" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="text_filed_vendas" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="text_field_vendas" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="label_vendas" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btFileChooserVendas" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="text_filed_precos" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="text_field_precos" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="label_precos" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btFileChooserPreços" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="text_filed_vendedores" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="text_field_vendedores" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="label_vendedores" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btFileChooserVendedores" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="label_saida" linkSize="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="text_filed_saida" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="text_field_saida" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="button_calc" min="-2" max="-2" attributes="0"/>
@@ -263,18 +263,18 @@
                 <Property name="text" type="java.lang.String" value="Arquivo de Saida"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="text_filed_mes">
+            <Component class="javax.swing.JTextField" name="text_field_mes">
               <Properties>
                 <Property name="name" type="java.lang.String" value="" noResource="true"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="text_filed_vendas">
+            <Component class="javax.swing.JTextField" name="text_field_vendas">
             </Component>
-            <Component class="javax.swing.JTextField" name="text_filed_precos">
+            <Component class="javax.swing.JTextField" name="text_field_precos">
             </Component>
-            <Component class="javax.swing.JTextField" name="text_filed_vendedores">
+            <Component class="javax.swing.JTextField" name="text_field_vendedores">
             </Component>
-            <Component class="javax.swing.JTextField" name="text_filed_saida">
+            <Component class="javax.swing.JTextField" name="text_field_saida">
             </Component>
             <Component class="javax.swing.JButton" name="button_calc">
               <Properties>
