--- a/pm2012_1/src/view/Main.form
+++ b/pm2012_1/src/view/Main.form
@@ -170,10 +170,11 @@
                                   <Component id="text_field_saida" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="btFileChooserVendedores" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btFileChooserPreços" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btFileChooserVendas" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="btFileChooserVendedores" alignment="1" max="32767" attributes="0"/>
+                                  <Component id="btFileChooserPreços" alignment="1" max="32767" attributes="0"/>
+                                  <Component id="btFileChooserVendas" alignment="1" max="32767" attributes="0"/>
+                                  <Component id="btFileChooserSaida" alignment="1" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <Component id="button_calc" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -211,13 +212,16 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="label_saida" linkSize="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="text_field_saida" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="text_field_saida" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="btFileChooserSaida" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="button_calc" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="37" max="32767" attributes="0"/>
+                      <EmptySpace pref="34" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -311,6 +315,14 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btFileChooserVendedoresActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="btFileChooserSaida">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Salvar"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btFileChooserSaidaActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
