--- a/trunk/pm2012_1/src/view/Main.form
+++ b/trunk/pm2012_1/src/view/Main.form
@@ -161,10 +161,6 @@
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="button_calc" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="444" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="text_field_mes" pref="200" max="32767" attributes="0"/>
                                   <Component id="text_field_vendas" alignment="0" max="32767" attributes="0"/>
@@ -179,11 +175,10 @@
                                   <Component id="btFileChooserVendas" alignment="1" max="32767" attributes="0"/>
                                   <Component id="btFileChooserSaida" alignment="1" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="button_calc" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace pref="238" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -206,7 +201,6 @@
                           <Component id="text_field_precos" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="label_precos" linkSize="1" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btFileChooserPreços" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -322,11 +316,6 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btFileChooserSaidaActionPerformed"/>
               </Events>
-            </Component>
-            <Component class="javax.swing.JLabel" name="jLabel1">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="jLabel1"/>
-              </Properties>
             </Component>
           </SubComponents>
         </Container>
